--- a/polynomialsjl.ipynb
+++ b/polynomialsjl.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "334adbd7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-15T11:52:45.796000-05:00",
-     "iopub.status.busy": "2022-01-15T11:52:44.980000-05:00",
-     "iopub.status.idle": "2022-01-15T11:53:51.150000-05:00",
-     "shell.execute_reply": "2022-01-15T11:53:51.073000-05:00"
+     "iopub.execute_input": "2022-02-10T10:43:57.563000-05:00",
+     "iopub.status.busy": "2022-02-10T10:43:46.780000-05:00",
+     "iopub.status.idle": "2022-02-10T10:44:05.412000-05:00",
+     "shell.execute_reply": "2022-02-10T10:44:05.393000-05:00"
     },
     "tags": []
    },
@@ -18,105 +18,298 @@
     "# load the package\n",
     "using HomotopyContinuation\n",
     "using Plots\n",
-    "using Distributions"
+    "using Distributions\n",
+    "using Pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "ad566a33",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-15T11:53:58.391000-05:00",
-     "iopub.status.busy": "2022-01-15T11:53:56.849000-05:00",
-     "iopub.status.idle": "2022-01-15T11:53:59.341000-05:00",
-     "shell.execute_reply": "2022-01-15T11:53:59.293000-05:00"
+     "iopub.execute_input": "2022-02-10T11:00:57.373000-05:00",
+     "iopub.status.busy": "2022-02-10T11:00:57.349000-05:00",
+     "iopub.status.idle": "2022-02-10T11:00:57.480000-05:00",
+     "shell.execute_reply": "2022-02-10T11:00:57.476000-05:00"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "@var x_10, x_11, x_12, x_13, x_14, x_15, x_16, x_17, x_18, x_19, x_20, x_21, x_22\n",
+    "@var x_0, x_1, x_2, x_3, x_4, x_5, x_6, x_7, x_8, x_9, x_10, x_11, x_12\n",
     "@var λ[1:10];\n",
-    "h0=0.3*x_11*x_19 + 0.5;\n",
-    "h1=-0.1*x_11*x_21*x_22 - 0.1*x_14*x_15 + 1.0;\n",
-    "h2=-1.0*x_11*x_14 + 0.1;\n",
-    "h3=0.6*x_10 + 0.9;\n",
-    "h4=0.2*x_12*x_18 + 0.6*x_20 + 0.9;\n",
-    "h5=0.1*x_12*x_13*x_22 + 0.5*x_15*x_18 - 0.6;\n",
-    "h6=-0.8*x_10*x_17 - 0.1*x_19*x_20*x_22 - 0.9;\n",
-    "h7=0.5*x_10*x_15 - 0.8*x_12 - 0.7;\n",
-    "h8=-0.2*x_13*x_17 - 0.1*x_16*x_19 - 0.9*x_18 + 0.5;\n",
-    "h9=0.2*x_20 - 0.5;\n",
-    "#vars=[x_10, x_11, x_12, x_13, x_14, x_15, x_16, x_17, x_18, x_19, x_20, x_21, x_22]\n",
-    "dfdx=[0, x_11-1, x_12-1, x_13-1, x_14-1, x_15-1, 0, x_17-1, x_18-1, x_19-1, 0, 0, 0]\n",
-    "h=[h0, h1, h2, h3, h4, h5, h6, h7, h8, h9];\n",
-    "vars=[x_10, x_11, x_12, x_13, x_14, x_15, x_16, x_17, x_18, x_19, x_20, x_21, x_22];"
+    "@var u[1:3];\n",
+    "h0=-0.3*x_3*x_7*x_9 + 0.2*x_4*x_6 - 0.7;\n",
+    "h1=0.9*x_0 + 0.3*x_1*x_5 - 1.0;\n",
+    "h2=-0.7*x_10 - 0.3*x_11*x_1*x_4 - 0.8*x_12*x_2*x_6 - 0.6*x_5*x_7 - 0.8;\n",
+    "h3=0.6*x_0*x_4 - 0.6*x_8*x_9 - 0.7;\n",
+    "h4=0.7*x_0*x_2 + 0.2*x_7*x_8 - 0.9;\n",
+    "h5=0.1*x_10*x_2 + 0.9*x_3*x_7*x_9 - 0.9;\n",
+    "h6=-0.5*x_10*x_12*x_7 - 1.1;\n",
+    "h7=-0.3*x_0*x_5*x_9 + 0.8*x_1 + 0.1;\n",
+    "h8=-0.5*x_0*x_7 - 0.3*x_8 + 0.1;\n",
+    "h9=-0.4*x_0 + 0.3*x_10*x_3 + 0.7;\n",
+    "h10=x_6-u[1]\n",
+    "h11=x_11-u[2]\n",
+    "h12=x_12-u[3]\n",
+    "vars=[x_0, x_1, x_2, x_3, x_4, x_5, x_6, x_7, x_8, x_9, x_10, x_11, x_12]\n",
+    "h=[h0, h1, h2, h3, h4, h5, h6, h7, h8, h9, h10, h11, h12];"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "b39c4ab8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-15T11:54:04.857000-05:00",
-     "iopub.status.busy": "2022-01-15T11:54:04.857000-05:00",
-     "iopub.status.idle": "2022-01-15T11:54:05.824000-05:00",
-     "shell.execute_reply": "2022-01-15T11:54:05.824000-05:00"
+     "iopub.execute_input": "2022-02-10T11:00:58.101000-05:00",
+     "iopub.status.busy": "2022-02-10T11:00:58.100000-05:00",
+     "iopub.status.idle": "2022-02-10T11:00:58.119000-05:00",
+     "shell.execute_reply": "2022-02-10T11:00:58.118000-05:00"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "C1 = System(h, variables = vars);"
+    "C1 = System(h, variables = vars,parameters = u);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "8d937a83",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-15T11:54:06.755000-05:00",
-     "iopub.status.busy": "2022-01-15T11:54:06.755000-05:00",
-     "iopub.status.idle": "2022-01-15T11:54:06.756000-05:00",
-     "shell.execute_reply": "2022-01-15T11:54:06.756000-05:00"
+     "iopub.execute_input": "2022-02-10T11:00:59.033000-05:00",
+     "iopub.status.busy": "2022-02-10T11:00:58.997000-05:00",
+     "iopub.status.idle": "2022-02-10T11:01:09.225000-05:00",
+     "shell.execute_reply": "2022-02-10T11:01:09.225000-05:00"
     },
     "tags": []
    },
-   "outputs": [],
-   "source": [
-    "# res = solve(C1) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "48a6a99c",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-07T20:08:46.627000-05:00",
-     "iopub.status.busy": "2021-12-07T20:08:46.627000-05:00",
-     "iopub.status.idle": "2021-12-07T20:08:46.634000-05:00",
-     "shell.execute_reply": "2021-12-07T20:08:46.631000-05:00"
-    }
-   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mTracking 29 paths... 100%|██████████████████████████████| Time: 0:00:04\u001b[39m\n",
+      "\u001b[34m  # paths tracked:                  29\u001b[39m\n",
+      "\u001b[34m  # non-singular solutions (real):  29 (7)\u001b[39m\n",
+      "\u001b[34m  # singular endpoints (real):      0 (0)\u001b[39m\n",
+      "\u001b[34m  # total solutions (real):         29 (7)\u001b[39m\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "1-element Array{Array{Float64,1},1}:\n",
-       " [-1.5000000000000002, -16666.666666666668, 0.001, 1559.245660881175, -6.0e-6, -0.9343999999999999, 1.080018815086782e9, 0.001, -12000.0, 0.0001, 2.5, 1.6688909201602135e-8, -35952.0]"
+       "Result with 29 solutions\n",
+       "========================\n",
+       "• 29 paths tracked\n",
+       "• 29 non-singular solutions (7 real)\n",
+       "• random_seed: 0xbd3a74b7\n",
+       "• start_system: :polyhedral\n"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "real_sols = real_solutions(res)"
+    "res = solve(C1, target_parameters =[-2.604883,5.040266,13.75]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "48a6a99c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-02-10T11:01:09.226000-05:00",
+     "iopub.status.busy": "2022-02-10T11:01:09.225000-05:00",
+     "iopub.status.idle": "2022-02-10T11:01:09.227000-05:00",
+     "shell.execute_reply": "2022-02-10T11:01:09.227000-05:00"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "real_sols = real_solutions(res);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "9961b14b-2def-4e88-b5b3-dc6596dac5ce",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-02-10T11:01:09.228000-05:00",
+     "iopub.status.busy": "2022-02-10T11:01:09.228000-05:00",
+     "iopub.status.idle": "2022-02-10T11:01:09.345000-05:00",
+     "shell.execute_reply": "2022-02-10T11:01:09.344000-05:00"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.935346e+00</td>\n",
+       "      <td>-4.329879e+00</td>\n",
+       "      <td>6.649830e-01</td>\n",
+       "      <td>1.829977e-02</td>\n",
+       "      <td>-1.344897</td>\n",
+       "      <td>5.710791e-01</td>\n",
+       "      <td>-2.604883</td>\n",
+       "      <td>-0.011848</td>\n",
+       "      <td>0.371550</td>\n",
+       "      <td>-1.014536e+01</td>\n",
+       "      <td>13.504409</td>\n",
+       "      <td>5.040266</td>\n",
+       "      <td>13.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-8.683357e-01</td>\n",
+       "      <td>-2.407323e-03</td>\n",
+       "      <td>-1.477456e+00</td>\n",
+       "      <td>5.731087e-01</td>\n",
+       "      <td>-1.343632</td>\n",
+       "      <td>-2.466782e+03</td>\n",
+       "      <td>-2.604883</td>\n",
+       "      <td>0.026266</td>\n",
+       "      <td>0.371346</td>\n",
+       "      <td>1.526212e-04</td>\n",
+       "      <td>-6.091539</td>\n",
+       "      <td>5.040266</td>\n",
+       "      <td>13.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.500000e+00</td>\n",
+       "      <td>-4.855545e+00</td>\n",
+       "      <td>5.325714e-01</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>-1.885397</td>\n",
+       "      <td>8.581255e-01</td>\n",
+       "      <td>-2.604883</td>\n",
+       "      <td>-0.160000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-5.880159e+00</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.040266</td>\n",
+       "      <td>13.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-3.893801e+02</td>\n",
+       "      <td>-1.310331e-01</td>\n",
+       "      <td>7.359769e+04</td>\n",
+       "      <td>-1.281392e+06</td>\n",
+       "      <td>-0.002999</td>\n",
+       "      <td>-8.940291e+03</td>\n",
+       "      <td>-2.604883</td>\n",
+       "      <td>-393.135283</td>\n",
+       "      <td>-255131.458224</td>\n",
+       "      <td>-4.621492e-09</td>\n",
+       "      <td>0.000407</td>\n",
+       "      <td>5.040266</td>\n",
+       "      <td>13.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.660395e+00</td>\n",
+       "      <td>1.354763e-04</td>\n",
+       "      <td>1.361975e+05</td>\n",
+       "      <td>-3.992972e+02</td>\n",
+       "      <td>0.687915</td>\n",
+       "      <td>-1.216339e+04</td>\n",
+       "      <td>-2.604883</td>\n",
+       "      <td>-534.741658</td>\n",
+       "      <td>1480.137067</td>\n",
+       "      <td>-1.652279e-05</td>\n",
+       "      <td>0.000299</td>\n",
+       "      <td>5.040266</td>\n",
+       "      <td>13.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3.653039e-09</td>\n",
+       "      <td>-1.278543e-07</td>\n",
+       "      <td>-7.527632e+06</td>\n",
+       "      <td>2.010858e+02</td>\n",
+       "      <td>5586.825878</td>\n",
+       "      <td>-2.607135e+07</td>\n",
+       "      <td>-2.604883</td>\n",
+       "      <td>13.788740</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>-3.499940e+00</td>\n",
+       "      <td>-0.011604</td>\n",
+       "      <td>5.040266</td>\n",
+       "      <td>13.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-6.061267e-01</td>\n",
+       "      <td>-8.423903e-02</td>\n",
+       "      <td>5.312771e+00</td>\n",
+       "      <td>-8.088471e+01</td>\n",
+       "      <td>-1.906270</td>\n",
+       "      <td>-6.115590e+01</td>\n",
+       "      <td>-2.604883</td>\n",
+       "      <td>-4.119543</td>\n",
+       "      <td>-3.828275</td>\n",
+       "      <td>2.932321e-03</td>\n",
+       "      <td>0.038839</td>\n",
+       "      <td>5.040266</td>\n",
+       "      <td>13.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "             0             1             2   ...         10        11     12\n",
+       "0  1.935346e+00 -4.329879e+00  6.649830e-01  ...  13.504409  5.040266  13.75\n",
+       "1 -8.683357e-01 -2.407323e-03 -1.477456e+00  ...  -6.091539  5.040266  13.75\n",
+       "2  2.500000e+00 -4.855545e+00  5.325714e-01  ...   1.000000  5.040266  13.75\n",
+       "3 -3.893801e+02 -1.310331e-01  7.359769e+04  ...   0.000407  5.040266  13.75\n",
+       "4  1.660395e+00  1.354763e-04  1.361975e+05  ...   0.000299  5.040266  13.75\n",
+       "5  3.653039e-09 -1.278543e-07 -7.527632e+06  ...  -0.011604  5.040266  13.75\n",
+       "6 -6.061267e-01 -8.423903e-02  5.312771e+00  ...   0.038839  5.040266  13.75\n",
+       "\n",
+       "[7 rows x 13 columns]\n"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DataFrame(real_sols)"
    ]
   },
   {
