--- a/al_force_order.ipynb
+++ b/al_force_order.ipynb
@@ -518,9 +518,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mdo",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "mdo"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -532,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
