--- a/app_miniac.ipynb
+++ b/app_miniac.ipynb
@@ -957,9 +957,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mdo",
+   "display_name": "Python [conda env:mdo]",
    "language": "python",
-   "name": "mdo"
+   "name": "conda-env-mdo-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -971,7 +971,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
