updating unit and grad calculation engine

--- a/polynomialsjl.ipynb
+++ b/polynomialsjl.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "334adbd7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-10T10:43:57.563000-05:00",
-     "iopub.status.busy": "2022-02-10T10:43:46.780000-05:00",
-     "iopub.status.idle": "2022-02-10T10:44:05.412000-05:00",
-     "shell.execute_reply": "2022-02-10T10:44:05.393000-05:00"
+     "iopub.execute_input": "2022-04-03T13:43:14.265000-04:00",
+     "iopub.status.busy": "2022-04-03T13:43:07.467000-04:00",
+     "iopub.status.idle": "2022-04-03T13:43:15.367000-04:00",
+     "shell.execute_reply": "2022-04-03T13:43:15.367000-04:00"
     },
     "tags": []
    },
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "ad566a33",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-10T11:00:57.373000-05:00",
-     "iopub.status.busy": "2022-02-10T11:00:57.349000-05:00",
-     "iopub.status.idle": "2022-02-10T11:00:57.480000-05:00",
-     "shell.execute_reply": "2022-02-10T11:00:57.476000-05:00"
+     "iopub.execute_input": "2022-04-03T13:43:16.525000-04:00",
+     "iopub.status.busy": "2022-04-03T13:43:16.525000-04:00",
+     "iopub.status.idle": "2022-04-03T13:43:17.192000-04:00",
+     "shell.execute_reply": "2022-04-03T13:43:17.192000-04:00"
     },
     "tags": []
    },
@@ -59,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "b39c4ab8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-10T11:00:58.101000-05:00",
-     "iopub.status.busy": "2022-02-10T11:00:58.100000-05:00",
-     "iopub.status.idle": "2022-02-10T11:00:58.119000-05:00",
-     "shell.execute_reply": "2022-02-10T11:00:58.118000-05:00"
+     "iopub.execute_input": "2022-04-03T13:43:18.982000-04:00",
+     "iopub.status.busy": "2022-04-03T13:43:18.982000-04:00",
+     "iopub.status.idle": "2022-04-03T13:43:19.968000-04:00",
+     "shell.execute_reply": "2022-04-03T13:43:19.968000-04:00"
     },
     "tags": []
    },
@@ -77,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "8d937a83",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-10T11:00:59.033000-05:00",
-     "iopub.status.busy": "2022-02-10T11:00:58.997000-05:00",
-     "iopub.status.idle": "2022-02-10T11:01:09.225000-05:00",
-     "shell.execute_reply": "2022-02-10T11:01:09.225000-05:00"
+     "iopub.execute_input": "2022-04-03T13:43:21.761000-04:00",
+     "iopub.status.busy": "2022-04-03T13:43:21.761000-04:00",
+     "iopub.status.idle": "2022-04-03T13:44:10.006000-04:00",
+     "shell.execute_reply": "2022-04-03T13:44:10.006000-04:00"
     },
     "tags": []
    },
@@ -93,7 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32mTracking 29 paths... 100%|██████████████████████████████| Time: 0:00:04\u001b[39m\n",
+      "\u001b[32mTracking 29 paths... 100%|██████████████████████████████| Time: 0:00:13\u001b[39m\n",
       "\u001b[34m  # paths tracked:                  29\u001b[39m\n",
       "\u001b[34m  # non-singular solutions (real):  29 (7)\u001b[39m\n",
       "\u001b[34m  # singular endpoints (real):      0 (0)\u001b[39m\n",
@@ -107,11 +107,11 @@
        "========================\n",
        "• 29 paths tracked\n",
        "• 29 non-singular solutions (7 real)\n",
-       "• random_seed: 0xbd3a74b7\n",
+       "• random_seed: 0xb661d881\n",
        "• start_system: :polyhedral\n"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,14 +122,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "48a6a99c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-10T11:01:09.226000-05:00",
-     "iopub.status.busy": "2022-02-10T11:01:09.225000-05:00",
-     "iopub.status.idle": "2022-02-10T11:01:09.227000-05:00",
-     "shell.execute_reply": "2022-02-10T11:01:09.227000-05:00"
+     "iopub.execute_input": "2022-04-03T13:44:10.007000-04:00",
+     "iopub.status.busy": "2022-04-03T13:44:10.007000-04:00",
+     "iopub.status.idle": "2022-04-03T13:44:10.149000-04:00",
+     "shell.execute_reply": "2022-04-03T13:44:10.149000-04:00"
     },
     "tags": []
    },
@@ -140,14 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "9961b14b-2def-4e88-b5b3-dc6596dac5ce",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-10T11:01:09.228000-05:00",
-     "iopub.status.busy": "2022-02-10T11:01:09.228000-05:00",
-     "iopub.status.idle": "2022-02-10T11:01:09.345000-05:00",
-     "shell.execute_reply": "2022-02-10T11:01:09.344000-05:00"
+     "iopub.execute_input": "2022-04-03T13:44:10.150000-04:00",
+     "iopub.status.busy": "2022-04-03T13:44:10.150000-04:00",
+     "iopub.status.idle": "2022-04-03T13:44:10.921000-04:00",
+     "shell.execute_reply": "2022-04-03T13:44:10.921000-04:00"
     },
     "tags": []
    },
@@ -177,54 +177,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.935346e+00</td>\n",
-       "      <td>-4.329879e+00</td>\n",
-       "      <td>6.649830e-01</td>\n",
-       "      <td>1.829977e-02</td>\n",
-       "      <td>-1.344897</td>\n",
-       "      <td>5.710791e-01</td>\n",
-       "      <td>-2.604883</td>\n",
-       "      <td>-0.011848</td>\n",
-       "      <td>0.371550</td>\n",
-       "      <td>-1.014536e+01</td>\n",
-       "      <td>13.504409</td>\n",
-       "      <td>5.040266</td>\n",
-       "      <td>13.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-8.683357e-01</td>\n",
-       "      <td>-2.407323e-03</td>\n",
-       "      <td>-1.477456e+00</td>\n",
-       "      <td>5.731087e-01</td>\n",
-       "      <td>-1.343632</td>\n",
-       "      <td>-2.466782e+03</td>\n",
-       "      <td>-2.604883</td>\n",
-       "      <td>0.026266</td>\n",
-       "      <td>0.371346</td>\n",
-       "      <td>1.526212e-04</td>\n",
-       "      <td>-6.091539</td>\n",
-       "      <td>5.040266</td>\n",
-       "      <td>13.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2.500000e+00</td>\n",
-       "      <td>-4.855545e+00</td>\n",
-       "      <td>5.325714e-01</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>-1.885397</td>\n",
-       "      <td>8.581255e-01</td>\n",
-       "      <td>-2.604883</td>\n",
-       "      <td>-0.160000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-5.880159e+00</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>5.040266</td>\n",
-       "      <td>13.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>-3.893801e+02</td>\n",
        "      <td>-1.310331e-01</td>\n",
        "      <td>7.359769e+04</td>\n",
@@ -240,23 +192,39 @@
        "      <td>13.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.660395e+00</td>\n",
-       "      <td>1.354763e-04</td>\n",
-       "      <td>1.361975e+05</td>\n",
-       "      <td>-3.992972e+02</td>\n",
-       "      <td>0.687915</td>\n",
-       "      <td>-1.216339e+04</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1.935346e+00</td>\n",
+       "      <td>-4.329879e+00</td>\n",
+       "      <td>6.649830e-01</td>\n",
+       "      <td>1.829977e-02</td>\n",
+       "      <td>-1.344897</td>\n",
+       "      <td>5.710791e-01</td>\n",
        "      <td>-2.604883</td>\n",
-       "      <td>-534.741658</td>\n",
-       "      <td>1480.137067</td>\n",
-       "      <td>-1.652279e-05</td>\n",
-       "      <td>0.000299</td>\n",
+       "      <td>-0.011848</td>\n",
+       "      <td>0.371550</td>\n",
+       "      <td>-1.014536e+01</td>\n",
+       "      <td>13.504409</td>\n",
        "      <td>5.040266</td>\n",
        "      <td>13.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>2</th>\n",
+       "      <td>-6.061267e-01</td>\n",
+       "      <td>-8.423903e-02</td>\n",
+       "      <td>5.312771e+00</td>\n",
+       "      <td>-8.088471e+01</td>\n",
+       "      <td>-1.906270</td>\n",
+       "      <td>-6.115590e+01</td>\n",
+       "      <td>-2.604883</td>\n",
+       "      <td>-4.119543</td>\n",
+       "      <td>-3.828275</td>\n",
+       "      <td>2.932321e-03</td>\n",
+       "      <td>0.038839</td>\n",
+       "      <td>5.040266</td>\n",
+       "      <td>13.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>3.653039e-09</td>\n",
        "      <td>-1.278543e-07</td>\n",
        "      <td>-7.527632e+06</td>\n",
@@ -272,18 +240,50 @@
        "      <td>13.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>-6.061267e-01</td>\n",
-       "      <td>-8.423903e-02</td>\n",
-       "      <td>5.312771e+00</td>\n",
-       "      <td>-8.088471e+01</td>\n",
-       "      <td>-1.906270</td>\n",
-       "      <td>-6.115590e+01</td>\n",
+       "      <th>4</th>\n",
+       "      <td>-8.683357e-01</td>\n",
+       "      <td>-2.407323e-03</td>\n",
+       "      <td>-1.477456e+00</td>\n",
+       "      <td>5.731087e-01</td>\n",
+       "      <td>-1.343632</td>\n",
+       "      <td>-2.466782e+03</td>\n",
        "      <td>-2.604883</td>\n",
-       "      <td>-4.119543</td>\n",
-       "      <td>-3.828275</td>\n",
-       "      <td>2.932321e-03</td>\n",
-       "      <td>0.038839</td>\n",
+       "      <td>0.026266</td>\n",
+       "      <td>0.371346</td>\n",
+       "      <td>1.526212e-04</td>\n",
+       "      <td>-6.091539</td>\n",
+       "      <td>5.040266</td>\n",
+       "      <td>13.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2.500000e+00</td>\n",
+       "      <td>-4.855545e+00</td>\n",
+       "      <td>5.325714e-01</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>-1.885397</td>\n",
+       "      <td>8.581255e-01</td>\n",
+       "      <td>-2.604883</td>\n",
+       "      <td>-0.160000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-5.880159e+00</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.040266</td>\n",
+       "      <td>13.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1.660395e+00</td>\n",
+       "      <td>1.354763e-04</td>\n",
+       "      <td>1.361975e+05</td>\n",
+       "      <td>-3.992972e+02</td>\n",
+       "      <td>0.687915</td>\n",
+       "      <td>-1.216339e+04</td>\n",
+       "      <td>-2.604883</td>\n",
+       "      <td>-534.741658</td>\n",
+       "      <td>1480.137067</td>\n",
+       "      <td>-1.652279e-05</td>\n",
+       "      <td>0.000299</td>\n",
        "      <td>5.040266</td>\n",
        "      <td>13.75</td>\n",
        "    </tr>\n",
@@ -292,18 +292,18 @@
       ],
       "text/plain": [
        "             0             1             2   ...         10        11     12\n",
-       "0  1.935346e+00 -4.329879e+00  6.649830e-01  ...  13.504409  5.040266  13.75\n",
-       "1 -8.683357e-01 -2.407323e-03 -1.477456e+00  ...  -6.091539  5.040266  13.75\n",
-       "2  2.500000e+00 -4.855545e+00  5.325714e-01  ...   1.000000  5.040266  13.75\n",
-       "3 -3.893801e+02 -1.310331e-01  7.359769e+04  ...   0.000407  5.040266  13.75\n",
-       "4  1.660395e+00  1.354763e-04  1.361975e+05  ...   0.000299  5.040266  13.75\n",
-       "5  3.653039e-09 -1.278543e-07 -7.527632e+06  ...  -0.011604  5.040266  13.75\n",
-       "6 -6.061267e-01 -8.423903e-02  5.312771e+00  ...   0.038839  5.040266  13.75\n",
+       "0 -3.893801e+02 -1.310331e-01  7.359769e+04  ...   0.000407  5.040266  13.75\n",
+       "1  1.935346e+00 -4.329879e+00  6.649830e-01  ...  13.504409  5.040266  13.75\n",
+       "2 -6.061267e-01 -8.423903e-02  5.312771e+00  ...   0.038839  5.040266  13.75\n",
+       "3  3.653039e-09 -1.278543e-07 -7.527632e+06  ...  -0.011604  5.040266  13.75\n",
+       "4 -8.683357e-01 -2.407323e-03 -1.477456e+00  ...  -6.091539  5.040266  13.75\n",
+       "5  2.500000e+00 -4.855545e+00  5.325714e-01  ...   1.000000  5.040266  13.75\n",
+       "6  1.660395e+00  1.354763e-04  1.361975e+05  ...   0.000299  5.040266  13.75\n",
        "\n",
        "[7 rows x 13 columns]\n"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1654,15 +1654,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.2",
+   "display_name": "Julia 1.7.2",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.2"
+   "version": "1.7.2"
   }
  },
  "nbformat": 4,
