MVP example for optimization

--- a/minimdo/datastructures/sellar.ipynb
+++ b/minimdo/datastructures/sellar.ipynb
@@ -758,15 +758,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "dc74ebb8-19e0-444e-bdc1-d4e98ac0d026",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-02T05:02:10.236186Z",
-     "iopub.status.busy": "2022-05-02T05:02:10.236186Z",
-     "iopub.status.idle": "2022-05-02T05:02:10.241309Z",
-     "shell.execute_reply": "2022-05-02T05:02:10.241035Z",
-     "shell.execute_reply.started": "2022-05-02T05:02:10.236186Z"
+     "iopub.execute_input": "2022-05-02T05:03:14.414850Z",
+     "iopub.status.busy": "2022-05-02T05:03:14.414850Z",
+     "iopub.status.idle": "2022-05-02T05:03:14.427030Z",
+     "shell.execute_reply": "2022-05-02T05:03:14.426850Z",
+     "shell.execute_reply.started": "2022-05-02T05:03:14.414850Z"
     },
     "tags": []
    },
@@ -777,30 +777,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "c93bd683-3ac1-432a-9852-2eedc0c1a457",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-02T04:41:57.336884Z",
-     "iopub.status.busy": "2022-05-02T04:41:57.335883Z",
-     "iopub.status.idle": "2022-05-02T04:41:57.358680Z",
-     "shell.execute_reply": "2022-05-02T04:41:57.357771Z",
-     "shell.execute_reply.started": "2022-05-02T04:41:57.336884Z"
-    }
+     "iopub.execute_input": "2022-05-02T05:03:14.812181Z",
+     "iopub.status.busy": "2022-05-02T05:03:14.812181Z",
+     "iopub.status.idle": "2022-05-02T05:03:14.829529Z",
+     "shell.execute_reply": "2022-05-02T05:03:14.829529Z",
+     "shell.execute_reply.started": "2022-05-02T05:03:14.812181Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'y2': -0.15853055396246019,\n",
-       " 'a': -4.840311002552851,\n",
-       " 'y1': 3.1600000194450577,\n",
-       " 'z2': -4.764651548547751,\n",
-       " 'z1': 2.8284821056527667,\n",
-       " 'x': -0.10736556479759275}"
+       "{'y2': 3.7552778732648413,\n",
+       " 'y1': 3.1600001890218565,\n",
+       " 'a': -0.7510555746459193,\n",
+       " 'z2': 7.0091761203601424e-12,\n",
+       " 'z1': 1.9776389366281641,\n",
+       " 'x': 3.987175173358892e-14}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,15 +812,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "95caac8f-926b-4b9d-aca5-5cc341a911b6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-02T04:41:45.560985Z",
-     "iopub.status.busy": "2022-05-02T04:41:45.560985Z",
-     "iopub.status.idle": "2022-05-02T04:41:45.566983Z",
-     "shell.execute_reply": "2022-05-02T04:41:45.566983Z",
-     "shell.execute_reply.started": "2022-05-02T04:41:45.560985Z"
+     "iopub.execute_input": "2022-05-02T05:03:16.894607Z",
+     "iopub.status.busy": "2022-05-02T05:03:16.893608Z",
+     "iopub.status.idle": "2022-05-02T05:03:16.905192Z",
+     "shell.execute_reply": "2022-05-02T05:03:16.904600Z",
+     "shell.execute_reply.started": "2022-05-02T05:03:16.894607Z"
     },
     "tags": []
    },
@@ -827,15 +828,15 @@
     {
      "data": {
       "text/plain": [
-       "[[-4.840311002552852],\n",
-       " [3.160000019445058],\n",
-       " [-0.15853055396251658],\n",
-       " -0.4213364381619351,\n",
-       " -1.9445057564126955e-08,\n",
-       " -24.15853055396246]"
+       "[[-0.7510555746459193],\n",
+       " [3.1600001890218565],\n",
+       " [3.755277873264841],\n",
+       " 3.183394138181799,\n",
+       " -1.8902185638935975e-07,\n",
+       " -20.24472212673516]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,15 +847,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "id": "8d030727-849b-4134-885a-4d27e29b9fc4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-02T04:13:58.475239Z",
-     "iopub.status.busy": "2022-05-02T04:13:58.475239Z",
-     "iopub.status.idle": "2022-05-02T04:13:58.524824Z",
-     "shell.execute_reply": "2022-05-02T04:13:58.524824Z",
-     "shell.execute_reply.started": "2022-05-02T04:13:58.475239Z"
+     "iopub.execute_input": "2022-05-02T05:03:22.087991Z",
+     "iopub.status.busy": "2022-05-02T05:03:22.087991Z",
+     "iopub.status.idle": "2022-05-02T05:03:22.125388Z",
+     "shell.execute_reply": "2022-05-02T05:03:22.125388Z",
+     "shell.execute_reply.started": "2022-05-02T05:03:22.087991Z"
     },
     "tags": []
    },
@@ -874,7 +875,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x21bb1685be0>"
+       "<IPython.lib.display.IFrame at 0x2326ed49490>"
       ]
      },
      "metadata": {},
@@ -883,36 +884,6 @@
    ],
    "source": [
     "om.n2(prob)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "01cbb184-419a-4213-867d-34acb6347a21",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-02T02:57:57.474175Z",
-     "iopub.status.busy": "2022-05-02T02:57:57.474175Z",
-     "iopub.status.idle": "2022-05-02T02:57:57.487286Z",
-     "shell.execute_reply": "2022-05-02T02:57:57.487174Z",
-     "shell.execute_reply.started": "2022-05-02T02:57:57.474175Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'x': 1, 'z1': 1, 'z2': 1, 'y2': 2, 'a': 2, 'y1': 2}"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Vtree"
    ]
   },
   {
