--- a/minimdo/datastructures/sellar.ipynb
+++ b/minimdo/datastructures/sellar.ipynb
@@ -123,7 +123,7 @@
    },
    "outputs": [],
    "source": [
-    "model = Model(root=OPT)\n",
+    "model = Model(solver=OPT)\n",
     "m = model.root\n",
     "a = adda(m, 'a', z2+x-0.2*y2)\n",
     "y1 = adda(m, 'y1', z1**2+a)\n",
