updates making openMDAO recording work

--- a/minimdo/polynomialsjl.ipynb
+++ b/minimdo/polynomialsjl.ipynb
@@ -6,10 +6,10 @@
    "id": "334adbd7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-04-18T15:18:32.715000-04:00",
-     "iopub.status.busy": "2022-04-18T15:18:32.715000-04:00",
-     "iopub.status.idle": "2022-04-18T15:18:47.241000-04:00",
-     "shell.execute_reply": "2022-04-18T15:18:47.195000-04:00"
+     "iopub.execute_input": "2022-05-04T11:33:24.808000-04:00",
+     "iopub.status.busy": "2022-05-04T11:33:24.808000-04:00",
+     "iopub.status.idle": "2022-05-04T11:33:45.579000-04:00",
+     "shell.execute_reply": "2022-05-04T11:33:45.579000-04:00"
     },
     "tags": []
    },
@@ -20,6 +20,416 @@
     "using Plots\n",
     "using Distributions\n",
     "using Pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3563b0ce-3a41-4e36-a1ab-efe7adc730d4",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-04T11:36:47.309000-04:00",
+     "iopub.status.busy": "2022-05-04T11:36:47.309000-04:00",
+     "iopub.status.idle": "2022-05-04T11:36:47.325000-04:00",
+     "shell.execute_reply": "2022-05-04T11:36:47.325000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = [2; 2.5; 3]\n",
+    "w = [1.3; 1.5; 1.2]\n",
+    "a1e = 0.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "fe078650-ca15-4051-a99a-182d53b5034b",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-04T12:17:16.085000-04:00",
+     "iopub.status.busy": "2022-05-04T12:17:16.085000-04:00",
+     "iopub.status.idle": "2022-05-04T12:17:16.086000-04:00",
+     "shell.execute_reply": "2022-05-04T12:17:16.086000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ 1.69*x1^2 + 2.25*x2^2 + 1.44*x3^2 + (-0.2 + a1)^2 $$"
+      ],
+      "text/plain": [
+       "1.69*x1^2 + 2.25*x2^2 + 1.44*x3^2 + (-0.2 + a1)^2"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "5ecce9e4-c63d-4030-8063-8cb50cb52830",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-04T12:20:12.868000-04:00",
+     "iopub.status.busy": "2022-05-04T12:20:12.867000-04:00",
+     "iopub.status.idle": "2022-05-04T12:20:12.872000-04:00",
+     "shell.execute_reply": "2022-05-04T12:20:12.871000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Expression}:\n",
+       " 2.0 - a1 + 0.1*x1*a2 + 0.8*x1*a3\n",
+       "                 2.5 - a2 + x2*a3\n",
+       " 3.0 - a3 + 0.1*x3*a1 + 0.8*x3*a2"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@var x1, x2, x3, a1, a2, a3\n",
+    "@var λ[1:3];\n",
+    "h1 = 0.1x1*a2+0.8x1*a3+b[1]-a1\n",
+    "h2 = x2*a3+b[2]-a2\n",
+    "h3 = 0.1x3*a1+0.8x3*a2+b[3]-a3\n",
+    "f = (a1-a1e)^2+([x1^2 x2^2 x3^2]*w.^2)[1];\n",
+    "vars = [x1, x2, x3, a1, a2, a3]\n",
+    "h = [h1, h2, h3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "0b0618d8-5022-41be-983b-44d0b9594ded",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-04T12:20:13.621000-04:00",
+     "iopub.status.busy": "2022-05-04T12:20:13.621000-04:00",
+     "iopub.status.idle": "2022-05-04T12:20:13.622000-04:00",
+     "shell.execute_reply": "2022-05-04T12:20:13.622000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "J = differentiate(h, vars);\n",
+    "dfdx = differentiate(f, vars);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "c62d33ba-8a03-4bf5-ae9e-2d9d3eb05cf9",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-04T12:20:14.410000-04:00",
+     "iopub.status.busy": "2022-05-04T12:20:14.410000-04:00",
+     "iopub.status.idle": "2022-05-04T12:20:14.412000-04:00",
+     "shell.execute_reply": "2022-05-04T12:20:14.411000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "kkt = [dfdx - J'*λ; h];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "ccecc959-529a-4432-af11-5f37059d52fa",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-04T12:20:14.799000-04:00",
+     "iopub.status.busy": "2022-05-04T12:20:14.799000-04:00",
+     "iopub.status.idle": "2022-05-04T12:20:14.802000-04:00",
+     "shell.execute_reply": "2022-05-04T12:20:14.802000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "Opt = System(kkt, variables = [vars; λ]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "dc4758cc-80cd-4a5a-a1fe-5bc190dd3753",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-04T12:20:15.362000-04:00",
+     "iopub.status.busy": "2022-05-04T12:20:15.362000-04:00",
+     "iopub.status.idle": "2022-05-04T12:20:18.735000-04:00",
+     "shell.execute_reply": "2022-05-04T12:20:18.735000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mTracking 68 paths... 100%|██████████████████████████████| Time: 0:00:02\u001b[39m\n",
+      "\u001b[34m  # paths tracked:                  68\u001b[39m\n",
+      "\u001b[34m  # non-singular solutions (real):  52 (6)\u001b[39m\n",
+      "\u001b[34m  # singular endpoints (real):      0 (0)\u001b[39m\n",
+      "\u001b[34m  # total solutions (real):         52 (6)\u001b[39m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Result with 52 solutions\n",
+       "========================\n",
+       "• 68 paths tracked\n",
+       "• 52 non-singular solutions (6 real)\n",
+       "• random_seed: 0x6a27d19b\n",
+       "• start_system: :polyhedral\n"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = solve(Opt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "69b8aa33-912e-4823-bb57-b463ec5970fc",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-04T12:20:21.555000-04:00",
+     "iopub.status.busy": "2022-05-04T12:20:21.554000-04:00",
+     "iopub.status.idle": "2022-05-04T12:20:21.555000-04:00",
+     "shell.execute_reply": "2022-05-04T12:20:21.555000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "real_sols = real_solutions(res);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "1e9fe238-01d8-488d-a01a-903e7ed7256e",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-04T12:20:37.217000-04:00",
+     "iopub.status.busy": "2022-05-04T12:20:37.217000-04:00",
+     "iopub.status.idle": "2022-05-04T12:20:37.219000-04:00",
+     "shell.execute_reply": "2022-05-04T12:20:37.218000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5698273209859522"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate.(f, vars=>real_sols[6][1:6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "a5ee7250-651f-45fb-a71d-3e630565f489",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-04T12:20:30.401000-04:00",
+     "iopub.status.busy": "2022-05-04T12:20:30.401000-04:00",
+     "iopub.status.idle": "2022-05-04T12:20:30.403000-04:00",
+     "shell.execute_reply": "2022-05-04T12:20:30.403000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Float64}:\n",
+       "  0.02200000000000002\n",
+       " -0.0006700000000001427\n",
+       " -0.00033490000000009623"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate.(h, vars=>[-0.50, 0.047, 0.179, 0.489, 2.66, 3.39])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "5256e3e0-fef3-49b7-b67c-45143f0fc262",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-04T12:20:54.155000-04:00",
+     "iopub.status.busy": "2022-05-04T12:20:54.155000-04:00",
+     "iopub.status.idle": "2022-05-04T12:20:54.165000-04:00",
+     "shell.execute_reply": "2022-05-04T12:20:54.165000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-103.434639</td>\n",
+       "      <td>-50.184457</td>\n",
+       "      <td>-21.532809</td>\n",
+       "      <td>41.017663</td>\n",
+       "      <td>-4.961686</td>\n",
+       "      <td>0.148685</td>\n",
+       "      <td>926.803038</td>\n",
+       "      <td>-1518.846834</td>\n",
+       "      <td>-468.326443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-86.265274</td>\n",
+       "      <td>-110.152274</td>\n",
+       "      <td>-68.584989</td>\n",
+       "      <td>2.805401</td>\n",
+       "      <td>-0.296461</td>\n",
+       "      <td>0.025387</td>\n",
+       "      <td>31230.347006</td>\n",
+       "      <td>-19524.983093</td>\n",
+       "      <td>-4554.284888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-199.947352</td>\n",
+       "      <td>-14.113430</td>\n",
+       "      <td>-0.156548</td>\n",
+       "      <td>318.722263</td>\n",
+       "      <td>-39.840275</td>\n",
+       "      <td>2.999999</td>\n",
+       "      <td>426.647714</td>\n",
+       "      <td>-21.170152</td>\n",
+       "      <td>-67946.881180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.256278</td>\n",
+       "      <td>-7.999987</td>\n",
+       "      <td>-0.157276</td>\n",
+       "      <td>1.936064</td>\n",
+       "      <td>3238.263202</td>\n",
+       "      <td>-404.471052</td>\n",
+       "      <td>-3.472126</td>\n",
+       "      <td>0.089005</td>\n",
+       "      <td>-0.000175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.373990</td>\n",
+       "      <td>-0.424271</td>\n",
+       "      <td>-1.563783</td>\n",
+       "      <td>1.842497</td>\n",
+       "      <td>2.875866</td>\n",
+       "      <td>-0.885910</td>\n",
+       "      <td>-3.001575</td>\n",
+       "      <td>2.155095</td>\n",
+       "      <td>-1.812393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-0.507125</td>\n",
+       "      <td>0.047480</td>\n",
+       "      <td>0.178855</td>\n",
+       "      <td>0.489936</td>\n",
+       "      <td>2.660934</td>\n",
+       "      <td>3.389500</td>\n",
+       "      <td>-0.575641</td>\n",
+       "      <td>0.063036</td>\n",
+       "      <td>0.236531</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "            0           1          2  ...             6             7             8\n",
+       "0 -103.434639  -50.184457 -21.532809  ...    926.803038  -1518.846834   -468.326443\n",
+       "1  -86.265274 -110.152274 -68.584989  ...  31230.347006 -19524.983093  -4554.284888\n",
+       "2 -199.947352  -14.113430  -0.156548  ...    426.647714    -21.170152 -67946.881180\n",
+       "3   -0.256278   -7.999987  -0.157276  ...     -3.472126      0.089005     -0.000175\n",
+       "4    0.373990   -0.424271  -1.563783  ...     -3.001575      2.155095     -1.812393\n",
+       "5   -0.507125    0.047480   0.178855  ...     -0.575641      0.063036      0.236531\n",
+       "\n",
+       "[6 rows x 9 columns]\n"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DataFrame(real_sols)"
    ]
   },
   {
