--- a/minimdo/app_allison.ipynb
+++ b/minimdo/app_allison.ipynb
@@ -2,26 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "01cfe78c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-27T15:24:06.334978Z",
-     "iopub.status.busy": "2021-09-27T15:24:06.334978Z",
-     "iopub.status.idle": "2021-09-27T15:24:06.354977Z",
-     "shell.execute_reply": "2021-09-27T15:24:06.353976Z",
-     "shell.execute_reply.started": "2021-09-27T15:24:06.334978Z"
-    }
+     "iopub.execute_input": "2022-05-04T13:51:05.821084Z",
+     "iopub.status.busy": "2022-05-04T13:51:05.821084Z",
+     "iopub.status.idle": "2022-05-04T13:51:07.243964Z",
+     "shell.execute_reply": "2022-05-04T13:51:07.243048Z",
+     "shell.execute_reply.started": "2022-05-04T13:51:05.821084Z"
+    },
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'api'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_26824/3287086272.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#import networkx as nx\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m#from representations import draw, bipartite_repr, digraph_repr\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mapi\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mModel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0madda\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maddf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maddsolver\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msetsolvefor\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maddobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maddineq\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'api'"
+     ]
+    }
+   ],
    "source": [
     "from compute import Var, eqvar\n",
-    "from inputresolver import reassigneq, eqvars, eqsonly, default_out, mdf_order, default_in, idx_eqlist\n",
+    "#from inputresolver import reassigneq, eqvars, eqsonly, default_out, mdf_order, default_in, idx_eqlist\n",
     "import numpy as np\n",
     "import sympy as sp\n",
-    "import networkx as nx\n",
-    "from representations import draw, bipartite_repr, digraph_repr"
+    "#import networkx as nx\n",
+    "#from representations import draw, bipartite_repr, digraph_repr\n",
+    "from api import Model, adda, addf, addsolver, setsolvefor, addobj, addineq"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dab6c9ad-62c3-4b2a-94e5-bb7f6ad37634",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
