--- a/minimdo/datastructures/execution.ipynb
+++ b/minimdo/datastructures/execution.ipynb
@@ -3,47 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fa3f5b5a-3761-4930-96d7-a19d8f521fd1",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-04-18T02:24:58.599428Z",
-     "iopub.status.busy": "2022-04-18T02:24:58.599428Z",
-     "iopub.status.idle": "2022-04-18T02:24:58.622102Z",
-     "shell.execute_reply": "2022-04-18T02:24:58.621469Z",
-     "shell.execute_reply.started": "2022-04-18T02:24:58.599428Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\johan\\github\\designresolver\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd .."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
    "id": "752e7676-c30e-45b9-9ff2-c963e68fceb4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-09T23:06:02.616151Z",
-     "iopub.status.busy": "2022-06-09T23:06:02.616151Z",
-     "iopub.status.idle": "2022-06-09T23:06:02.715820Z",
-     "shell.execute_reply": "2022-06-09T23:06:02.715028Z",
-     "shell.execute_reply.started": "2022-06-09T23:06:02.616151Z"
+     "iopub.execute_input": "2022-06-15T15:44:19.489261Z",
+     "iopub.status.busy": "2022-06-15T15:44:19.488794Z",
+     "iopub.status.idle": "2022-06-15T15:44:21.074719Z",
+     "shell.execute_reply": "2022-06-15T15:44:21.073836Z",
+     "shell.execute_reply.started": "2022-06-15T15:44:19.489261Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
     "from autograd import jacobian, grad\n",
+    "from compute import Var\n",
     "import autograd.numpy as anp\n",
     "import numpy as np\n",
     "from itertools import chain"
@@ -55,11 +29,11 @@
    "id": "159f00e2-9acd-490f-9dc9-3d9272d9503b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-09T23:06:03.378279Z",
-     "iopub.status.busy": "2022-06-09T23:06:03.378279Z",
-     "iopub.status.idle": "2022-06-09T23:06:05.086379Z",
-     "shell.execute_reply": "2022-06-09T23:06:05.086138Z",
-     "shell.execute_reply.started": "2022-06-09T23:06:03.378279Z"
+     "iopub.execute_input": "2022-06-15T15:44:21.075772Z",
+     "iopub.status.busy": "2022-06-15T15:44:21.075772Z",
+     "iopub.status.idle": "2022-06-15T15:44:21.728830Z",
+     "shell.execute_reply": "2022-06-15T15:44:21.728307Z",
+     "shell.execute_reply.started": "2022-06-15T15:44:21.075772Z"
     },
     "tags": []
    },
@@ -115,64 +89,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "fda5f724-b507-4516-88d5-ead73602da27",
+   "execution_count": 8,
+   "id": "58a4c21e-cf1f-408e-a1bd-44ff28930fd7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-09T23:06:06.933807Z",
-     "iopub.status.busy": "2022-06-09T23:06:06.933807Z",
-     "iopub.status.idle": "2022-06-09T23:06:06.950284Z",
-     "shell.execute_reply": "2022-06-09T23:06:06.949285Z",
-     "shell.execute_reply.started": "2022-06-09T23:06:06.933807Z"
+     "iopub.execute_input": "2022-06-15T15:44:56.165735Z",
+     "iopub.status.busy": "2022-06-15T15:44:56.165735Z",
+     "iopub.status.idle": "2022-06-15T15:44:56.175464Z",
+     "shell.execute_reply": "2022-06-15T15:44:56.175353Z",
+     "shell.execute_reply.started": "2022-06-15T15:44:56.165735Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "c2 = Component(lambda x,y: x**2+y**2, (1,2), component=1)"
+    "x,y = Var('x'), Var('y')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "bc6df935-136a-4fcf-9d22-b55a64af148f",
+   "execution_count": 9,
+   "id": "c17ee546-78c8-4af7-a568-81e49ec547b6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-09T23:06:07.201899Z",
-     "iopub.status.busy": "2022-06-09T23:06:07.201899Z",
-     "iopub.status.idle": "2022-06-09T23:06:07.213003Z",
-     "shell.execute_reply": "2022-06-09T23:06:07.213003Z",
-     "shell.execute_reply.started": "2022-06-09T23:06:07.201899Z"
+     "iopub.execute_input": "2022-06-15T15:44:56.350148Z",
+     "iopub.status.busy": "2022-06-15T15:44:56.349156Z",
+     "iopub.status.idle": "2022-06-15T15:44:56.361501Z",
+     "shell.execute_reply": "2022-06-15T15:44:56.361063Z",
+     "shell.execute_reply.started": "2022-06-15T15:44:56.349156Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import sympy as sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "335c2e69-a56b-4378-bce7-0fb9b20a0d73",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-06-15T15:44:56.521983Z",
+     "iopub.status.busy": "2022-06-15T15:44:56.521983Z",
+     "iopub.status.idle": "2022-06-15T15:44:56.531865Z",
+     "shell.execute_reply": "2022-06-15T15:44:56.531051Z",
+     "shell.execute_reply.started": "2022-06-15T15:44:56.521983Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from execution import sympy_fx_inputs, anp_math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4d1ad58e-d670-46d4-9674-a885ba806812",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-06-15T15:44:56.885770Z",
+     "iopub.status.busy": "2022-06-15T15:44:56.885770Z",
+     "iopub.status.idle": "2022-06-15T15:44:56.934213Z",
+     "shell.execute_reply": "2022-06-15T15:44:56.933859Z",
+     "shell.execute_reply.started": "2022-06-15T15:44:56.885770Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fx, ins, _ = sympy_fx_inputs(sp.acos(x/y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "01bf1035-0564-4a4c-9b4a-0fc4968f36ed",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-06-15T15:40:44.307376Z",
+     "iopub.status.busy": "2022-06-15T15:40:44.307376Z",
+     "iopub.status.idle": "2022-06-15T15:40:44.316163Z",
+     "shell.execute_reply": "2022-06-15T15:40:44.315471Z",
+     "shell.execute_reply.started": "2022-06-15T15:40:44.307376Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fx = sp.lambdify([y,x], sp.acos(x/y), anp_math)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "775abd62-76f2-41d2-89c0-bf345e4e9e4f",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-06-15T15:45:03.510445Z",
+     "iopub.status.busy": "2022-06-15T15:45:03.510445Z",
+     "iopub.status.idle": "2022-06-15T15:45:03.529059Z",
+     "shell.execute_reply": "2022-06-15T15:45:03.528900Z",
+     "shell.execute_reply.started": "2022-06-15T15:45:03.510445Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "c3 = Component(fx, (1,2), component=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c7578964-4d02-4dc5-a59e-0cd98a18d576",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-06-15T15:45:04.083030Z",
+     "iopub.status.busy": "2022-06-15T15:45:04.083030Z",
+     "iopub.status.idle": "2022-06-15T15:45:04.106719Z",
+     "shell.execute_reply": "2022-06-15T15:45:04.106216Z",
+     "shell.execute_reply.started": "2022-06-15T15:45:04.083030Z"
     },
     "tags": []
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\johan\\miniconda3\\envs\\mdo\\lib\\site-packages\\autograd\\tracer.py:48: RuntimeWarning: invalid value encountered in arccos\n",
+      "  return f_raw(*args, **kwargs)\n",
+      "C:\\Users\\johan\\miniconda3\\envs\\mdo\\lib\\site-packages\\autograd\\tracer.py:48: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  return f_raw(*args, **kwargs)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(1, 1)"
+       "{1: array(nan), 2: array(nan)}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c2.indims"
+    "c3.gradient(2,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d7623503-d8df-427b-893e-77469aa490bc",
+   "execution_count": 6,
+   "id": "fda5f724-b507-4516-88d5-ead73602da27",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-09T23:06:07.696011Z",
-     "iopub.status.busy": "2022-06-09T23:06:07.696011Z",
-     "iopub.status.idle": "2022-06-09T23:06:07.714272Z",
-     "shell.execute_reply": "2022-06-09T23:06:07.713255Z",
-     "shell.execute_reply.started": "2022-06-09T23:06:07.696011Z"
+     "iopub.execute_input": "2022-06-15T15:34:22.964125Z",
+     "iopub.status.busy": "2022-06-15T15:34:22.963125Z",
+     "iopub.status.idle": "2022-06-15T15:34:22.980332Z",
+     "shell.execute_reply": "2022-06-15T15:34:22.980332Z",
+     "shell.execute_reply.started": "2022-06-15T15:34:22.964125Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "c2 = Component(lambda x,y: anp.arccos(x/y), (1,2), component=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1ffce299-747a-4d69-b7cc-9fd23a119c3b",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-06-15T15:45:17.151942Z",
+     "iopub.status.busy": "2022-06-15T15:45:17.151942Z",
+     "iopub.status.idle": "2022-06-15T15:45:17.166211Z",
+     "shell.execute_reply": "2022-06-15T15:45:17.165236Z",
+     "shell.execute_reply.started": "2022-06-15T15:45:17.151942Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "c1 = Component.fromsympy(sp.acos(x/y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e735bff9-8580-45c6-8ec9-b2c93cadca2e",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-06-15T15:45:18.842055Z",
+     "iopub.status.busy": "2022-06-15T15:45:18.842055Z",
+     "iopub.status.idle": "2022-06-15T15:45:18.848007Z",
+     "shell.execute_reply": "2022-06-15T15:45:18.847931Z",
+     "shell.execute_reply.started": "2022-06-15T15:45:18.842055Z"
     },
     "tags": []
    },
@@ -180,10 +296,40 @@
     {
      "data": {
       "text/plain": [
-       "{1: array(2.), 2: array(4.)}"
+       "{'x': array(-0.57735027), 'y': array(0.28867513)}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c1.gradient(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d7623503-d8df-427b-893e-77469aa490bc",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-06-15T15:34:23.758312Z",
+     "iopub.status.busy": "2022-06-15T15:34:23.758312Z",
+     "iopub.status.idle": "2022-06-15T15:34:23.777730Z",
+     "shell.execute_reply": "2022-06-15T15:34:23.776826Z",
+     "shell.execute_reply.started": "2022-06-15T15:34:23.758312Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: array(-0.57735027), 2: array(0.28867513)}"
+      ]
+     },
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
