optimal structures and bugfixes

--- a/minimdo/datastructures/execution.ipynb
+++ b/minimdo/datastructures/execution.ipynb
@@ -6,11 +6,11 @@
    "id": "752e7676-c30e-45b9-9ff2-c963e68fceb4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-15T15:44:19.489261Z",
-     "iopub.status.busy": "2022-06-15T15:44:19.488794Z",
-     "iopub.status.idle": "2022-06-15T15:44:21.074719Z",
-     "shell.execute_reply": "2022-06-15T15:44:21.073836Z",
-     "shell.execute_reply.started": "2022-06-15T15:44:19.489261Z"
+     "iopub.execute_input": "2022-06-21T19:43:17.120293Z",
+     "iopub.status.busy": "2022-06-21T19:43:17.120293Z",
+     "iopub.status.idle": "2022-06-21T19:43:18.525417Z",
+     "shell.execute_reply": "2022-06-21T19:43:18.524797Z",
+     "shell.execute_reply.started": "2022-06-21T19:43:17.120293Z"
     },
     "tags": []
    },
@@ -25,21 +25,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "159f00e2-9acd-490f-9dc9-3d9272d9503b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-15T15:44:21.075772Z",
-     "iopub.status.busy": "2022-06-15T15:44:21.075772Z",
-     "iopub.status.idle": "2022-06-15T15:44:21.728830Z",
-     "shell.execute_reply": "2022-06-15T15:44:21.728307Z",
-     "shell.execute_reply.started": "2022-06-15T15:44:21.075772Z"
+     "iopub.execute_input": "2022-06-21T19:47:39.927234Z",
+     "iopub.status.busy": "2022-06-21T19:47:39.927234Z",
+     "iopub.status.idle": "2022-06-21T19:47:39.998956Z",
+     "shell.execute_reply": "2022-06-21T19:47:39.998956Z",
+     "shell.execute_reply.started": "2022-06-21T19:47:39.927234Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from execution import Component"
+    "from execution import Component\n",
+    "import jax.numpy as jnp\n",
+    "from constants_balloon import Pinterp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "122ae7ed-e10c-4802-9887-62a31f706dcf",
+   "metadata": {},
+   "source": [
+    "### JAX Interp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d243fa37-dad8-4e71-aa24-17754ccbc1c7",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-06-21T19:45:36.880262Z",
+     "iopub.status.busy": "2022-06-21T19:45:36.880262Z",
+     "iopub.status.idle": "2022-06-21T19:45:36.888400Z",
+     "shell.execute_reply": "2022-06-21T19:45:36.888400Z",
+     "shell.execute_reply.started": "2022-06-21T19:45:36.880262Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "interp = lambda x: jnp.interp(x, np.array([0,1,2,3,4]), np.array([0,2,4,9,16]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f59adf92-3e7c-4aed-aa56-bea011dad637",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-06-21T19:48:50.350960Z",
+     "iopub.status.busy": "2022-06-21T19:48:50.350960Z",
+     "iopub.status.idle": "2022-06-21T19:48:50.359409Z",
+     "shell.execute_reply": "2022-06-21T19:48:50.359409Z",
+     "shell.execute_reply.started": "2022-06-21T19:48:50.350960Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "c = Component(Pinterp, (1,), (2,), component=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "fc7c3ff5-484b-4f8e-8d4c-e957c734a27e",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-06-21T19:48:50.758623Z",
+     "iopub.status.busy": "2022-06-21T19:48:50.758623Z",
+     "iopub.status.idle": "2022-06-21T19:48:50.774562Z",
+     "shell.execute_reply": "2022-06-21T19:48:50.774358Z",
+     "shell.execute_reply.started": "2022-06-21T19:48:50.758623Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1,), 0, (2,), 'None')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4b3762b3-1880-4962-a603-431b4c86017a",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-06-21T19:48:13.145823Z",
+     "iopub.status.busy": "2022-06-21T19:48:13.145823Z",
+     "iopub.status.idle": "2022-06-21T19:48:13.164511Z",
+     "shell.execute_reply": "2022-06-21T19:48:13.164511Z",
+     "shell.execute_reply.started": "2022-06-21T19:48:13.145823Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(2, 1): DeviceArray(-11.42, dtype=float64)}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.graddict({1:2})"
    ]
   },
   {
